--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  base = "PanelAdmin"
+  command = "npm run build"
+  publish = ".next"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
