--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@types/react-dom": "^18.2.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.294.0",
     "next": "14.2.15",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.3.0",
-    "resend": "^6.4.2",
+    "resend": "^6.5.2",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
