--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.30.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "14.2.15",
     "puppeteer": "^24.31.0",
@@ -32,6 +33,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0"
   }
