--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^143.0.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.12",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.294.0",
     "next": "14.2.15",
     "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.32.1",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.2.0",
