--- a/package.json
+++ b/package.json
@@ -36,7 +36,12 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.21",
+    "@types/papaparse": "^5.5.2",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "papaparse": "^5.5.3",
+    "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.5.0"
   }
 }
